- Events row type now supported in dynamic content - Currently this only permits a card view of social events to be rendered, but this will later allow the event types and layout to be configurable

--- a/projects/ngx-ramblers/src/app/pages/social/social-search/social-search.html
+++ b/projects/ngx-ramblers/src/app/pages/social/social-search/social-search.html
@@ -1,4 +1,4 @@
-<ng-container *ngIf="display.allow.edits">
+<ng-container *ngIf="display.allow.admin">
   <ng-container *ngIf="showPagination">
     <ng-container *ngTemplateOutlet="searchAndFilterActions"></ng-container>
     <div class="d-flex">
