--- a/projects/ngx-ramblers/src/app/modules/common/dynamic-content/dynamic-content-view.html
+++ b/projects/ngx-ramblers/src/app/modules/common/dynamic-content/dynamic-content-view.html
@@ -18,6 +18,7 @@
     <app-dynamic-content-view-album *ngIf="actions.isAlbum(row)"
                                     [row]="row"
                                     [index]="actions.carouselOrAlbumIndex(row, viewablePageContent)"/>
+    <app-events *ngIf="actions.isEvents(row)" [row]="row" [rowIndex]="rowIndex"/>
   </ng-container>
   <ng-container *ngIf="!actions.pageContentFound(viewablePageContent, !!viewablePageContent?.id)">
     <div *ngIf="notify.alertTarget.showAlert" class="col-12 alert {{notify.alertTarget.alertClass}} mt-3">
