--- a/projects/ngx-ramblers/src/app/pages/social/social-view-page/social-view-page.html
+++ b/projects/ngx-ramblers/src/app/pages/social/social-view-page/social-view-page.html
@@ -1,5 +1,6 @@
-<app-page [pageTitle]="pageTitle()">
+
   <app-social-view *ngIf="!actions.editModeActive()" [actions]="actions"
-                   [socialEvent]="socialEvent"></app-social-view>
-  <app-social-edit [actions]="actions" *ngIf="actions.editModeActive()"></app-social-edit>
+                   [socialEvent]="socialEvent"/>
+  <app-page *ngIf="actions.editModeActive()" [pageTitle]="pageTitle()">
+    <app-social-edit [actions]="actions"/>
 </app-page>
