- Contact Us Route Created: - Enhanced Committee Configuration to allow any number of roles to be created. Previously these were limited to "chairman", "secretary", "treasurer", "membership", "social", "walks", "support" - A Committee role now has a Role type which can be:   - Committee Member - a committee member that is formerly recorded with Ramblers Head Office,   - System Role - This can be used to create an Enquiries role whihch can be assigned a specific email for inbound enquiries   - Group Member - not yet used, but would be a normal group member perhaps providing assistance to the committee but not formally a committee member - /admin/committee-settings now highlihts when a Brevo sender cannot be matched to a committee role email and provides an option to create it if this is the case. - Added a special route that can be triggered by a contact-us query string parameter which opens up an email contact form on the currently selected route, where a public member can enter their name, email address, subject and message. The following querystring parameters can also be used to control how the contact is made with the committee: - &role=<role_name> - &redirect=<path of page containing contact us link> - &subject=<a reference to a subject that has been pre-configured in mail settings> - full example of contact us markdown link: `[Contact Nick](?contact-us&role=chairman&subject=joining&redirect=contact-us)`` - Added "ng-recaptcha" library which has been configured to expect recaptcha v2 Site Key and Secret Key - reCAPTCHA configuration keys can be input and tested at /admin/system-settings?tab=external-systems

--- a/projects/ngx-ramblers/src/app/pages/social/social-view-page/social-view-page.html
+++ b/projects/ngx-ramblers/src/app/pages/social/social-view-page/social-view-page.html
@@ -1,6 +1,4 @@
-
-  <app-social-view *ngIf="!actions.editModeActive()" [actions]="actions"
-                   [socialEvent]="socialEvent"/>
-  <app-page *ngIf="actions.editModeActive()" [pageTitle]="pageTitle()">
-    <app-social-edit [actions]="actions"/>
+<app-social-view *ngIf="!actions.editModeActive()" [actions]="actions" [socialEvent]="socialEvent"/>
+<app-page *ngIf="actions.editModeActive()" [pageTitle]="pageTitle()">
+  <app-social-edit [actions]="actions"/>
 </app-page>
