- Allow walks to be copied from walks manager to local - Button for above hidden for time being but will be added to walks admin page later - Caters for situation where a group wishes to start creating walks locally after using Walks Manager - Logic for determining whether walk lead button is shown changed to accommodate new rules

--- a/projects/ngx-ramblers/src/app/pages/walks/walk-list/walk-list.component.html
+++ b/projects/ngx-ramblers/src/app/pages/walks/walk-list/walk-list.component.html
@@ -8,6 +8,10 @@
                     (pageChanged)="pageChanged($event)"></pagination>
 
       </app-walks-search>
+      <input *ngIf="false" type="submit"
+             [value]="'Copy ' + walks?.length + ' walks'"
+             (click)="walksService.copyWalks(walks)"
+             class="button-form button-form-edit-event mt-2 mr-2">
       <div class="table-responsive"
            *ngFor="let displayedWalk of currentPageWalks; let index = index; trackBy: walkTracker">
         <div *ngIf="display.isExpanded(displayedWalk.walk)">
