--- a/projects/ngx-ramblers/src/app/pages/walks/walk-edit/walk-edit.component.html
+++ b/projects/ngx-ramblers/src/app/pages/walks/walk-edit/walk-edit.component.html
@@ -402,7 +402,7 @@
           <div class="col-sm-6">
             <div class="row">
               <div class="col-sm-10">
-                <label for="walk-leader-contact-id">Ramblers Assemble Name</label>
+                <label for="walk-leader-contact-id">Walks Manager Contact Name</label>
                 <input [disabled]="inputDisabled()" [(ngModel)]="displayedWalk.walk.contactId"
                        type="text"
                        class="form-control input-sm flex-grow-1 mr-2" id="walk-leader-contact-id"
