--- a/projects/ngx-ramblers/src/app/pages/walks/walk-meetup-settings/walk-meetup-settings.component.html
+++ b/projects/ngx-ramblers/src/app/pages/walks/walk-meetup-settings/walk-meetup-settings.component.html
@@ -77,7 +77,7 @@
       <input *ngIf="activeTabIs(1)" type="submit" value="Save" (click)="save()"
              title="Save"
              class="button-form">
-      <input type="submit" value="Back to walks" (click)="backToWalks()"
+      <input type="submit" value="Back To Walks Admin" (click)="backToWalksAdmin()"
              title="Back to walks"
              class="button-form">
     </div>
