Album Enhancements and Fixes * Validation has been added across the site to ensure that content paths are input using a normalised lower case with dashes (also known as kebab-case) format. * Album name input is now constrained to kebab-case format. * When Editing an album, when the album selector is changed, the album preview changes in realtime to reflect the new selection. Previously this album selection did not affect the album preview. * The Album selector now shows the new button in line with the selector. Previously the new button was shown on a different line Album Index Fixes * An Album index now renders all albums for the content path match even if the album has no images loaded in it. If this is so, the album details are shown with an image load error where the album title page should be shown. Previously if any album did not contain images, it would prevent the whole album index from rendering Dynamic Content Enhancements and Fixes * Content Path is now constrained to kebab-case when the field is input * If a content path is navigated to with a non-kebab-case path, this is converted e.g. how-to/My Badly Named Path will be changed to /how-to/my-badly-named-path * If a content path has been changed to a different value and the revert button is clicked the original saved content is correctly restored. Previously nothing happend when the revert button was clicked as an attempt was made to revert back to content on the new, non-existent content path

--- a/projects/ngx-ramblers/src/app/carousel/edit/image-list-page/image-list-edit-page.html
+++ b/projects/ngx-ramblers/src/app/carousel/edit/image-list-page/image-list-edit-page.html
@@ -1,8 +1,8 @@
 <app-page pageTitle="Image Editor">
   <app-login-required>
     <app-markdown-editor allowHide="true" name="image-editor-help"
-                         description="Image Editor help"></app-markdown-editor>
-    <app-carousel-selector *ngIf="!editing" [name]="name"></app-carousel-selector>
-    <app-image-list-edit *ngIf="editing" [name]="name" (exit)="backToEditorHome()"></app-image-list-edit>
+                         description="Image Editor help"/>
+    <app-carousel-selector *ngIf="!editing" [name]="name"/>
+    <app-image-list-edit *ngIf="editing" [name]="name" (exit)="backToEditorHome()"/>
   </app-login-required>
 </app-page>
