- Angular upgrade to version 18:  - code changes. Markdown rendering still broken  - upgrade other peer dependencies

--- a/projects/ngx-ramblers/src/app/image-cropper-and-resizer/image-cropper-and-resizer.sass
+++ b/projects/ngx-ramblers/src/app/image-cropper-and-resizer/image-cropper-and-resizer.sass
@@ -1,4 +1,4 @@
-@import "bootstrap"
+@import "bootstrap/scss/bootstrap.scss"
 @import "../assets/styles/colours"
 @import "../assets/styles/buttons"
 @import "../assets/styles/text"
