--- a/projects/ngx-ramblers/src/app/pages/admin/member-admin/member-admin.component.html
+++ b/projects/ngx-ramblers/src/app/pages/admin/member-admin/member-admin.component.html
@@ -97,7 +97,7 @@
             <div class="table-responsive">
               <table class="round tbl-green-g table-striped table-hover table-sm">
                 <thead>
-                <tr class="white-anchor">
+                <tr class="pointer">
                   @if (!confirm.bulkDeleteOutstanding()) {
                     <th>Action</th>
                   }
