--- a/projects/ngx-ramblers/src/app/pages/admin/member-login-audit/member-login-audit.component.html
+++ b/projects/ngx-ramblers/src/app/pages/admin/member-login-audit/member-login-audit.component.html
@@ -75,7 +75,7 @@
           <div class="table-responsive">
             <table class="round tbl-green-g table-striped table-hover table-sm">
               <thead>
-              <tr class="white-anchor">
+              <tr class="pointer">
                 <th (click)="sortAuditBy('loginTime')">Time
                   @if (showAuditColumn('loginTime')) {
                     <span class="sorting-header"
