--- a/projects/ngx-ramblers/src/app/pages/walks/walk-meetup-config-parameters/walk-meetup-config-parameters.component.html
+++ b/projects/ngx-ramblers/src/app/pages/walks/walk-meetup-config-parameters/walk-meetup-config-parameters.component.html
@@ -5,7 +5,7 @@
           (ngModelChange)="changeDefaultContent($event)"
           class="form-control"
           id="default-prefix">
-    @for (contentTextItem of contentTextItems; track contentTextItem) {
+    @for (contentTextItem of contentTextItems; track contentTextItem.id) {
       <option
         [ngValue]="contentTextItem.name"
         [textContent]="contentTextItem.name">
