--- a/projects/ngx-ramblers/src/app/pages/admin/system-settings/mailchimp/mailchimp-campaign-defaults.html
+++ b/projects/ngx-ramblers/src/app/pages/admin/system-settings/mailchimp/mailchimp-campaign-defaults.html
@@ -7,7 +7,7 @@
               [disabled]="notReady()"
               (ngModelChange)="setCampaignDefaultsFields($event)"
               class="form-control input-sm">
-        @for (committeeMember of committeeReferenceData?.committeeMembers(); track committeeMember) {
+        @for (committeeMember of committeeReferenceData?.committeeMembers(); track committeeMember.nameAndDescription) {
           <option
             [ngValue]="committeeMember">{{ committeeMember.nameAndDescription }}
           </option>
